fix: use trim().isEmpty() for Java 8 (replace String.isBlank)
Made-with: Cursor